--- a/Repo-Markets/reserch.ipynb
+++ b/Repo-Markets/reserch.ipynb
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime, timedelta\n",
     "\n",
-    "API_KEY = '5a50326f6d5a0a4761993872596a4d76'"
+    "API_KEY = ''"
    ]
   },
   {
